# Sapphire

.github/: FUNDING.yml
futari-server/crates/futari_config/: Cargo.toml
futari-server/crates/futari_config/src/: lib.rs  server_config.rs
futari-server/crates/futari_dto/: Cargo.toml
futari-server/crates/futari_dto/src/: lib.rs
futari-server/crates/futari_dto/src/action_logs/request/: get_action_logs.rs  stream_actions.rs
futari-server/crates/futari_dto/src/action_logs/response/: action_log.rs
futari-server/crates/futari_dto/src/auth/request/: change_email.rs  change_password.rs  complete_signup.rs  confirm_email_change.rs  forgot_password.rs  login.rs  reset_password.rs  totp_disable.rs  totp_enable.rs  totp_regenerate_backup_codes.rs  totp_verify.rs  verify_email.rs
futari-server/crates/futari_dto/src/auth/response/: login.rs  logout.rs  totp_backup_codes.rs  totp_enable.rs  totp_required.rs  totp_setup.rs  totp_status.rs
futari-server/crates/futari_dto/src/moderation/request/: list_logs.rs
futari-server/crates/futari_dto/src/moderation/response/: list_logs.rs
futari-server/crates/futari_dto/src/oauth/internal/: sign_in_result.rs
futari-server/crates/futari_dto/src/oauth/request/: github.rs  google.rs  link.rs  unlink.rs
futari-server/crates/futari_dto/src/oauth/response/: oauth_connection.rs  oauth_url.rs  sign_in.rs
futari-server/crates/futari_dto/src/validator/: datetime_validator.rs  json_validator.rs  multipart_validator.rs  path_validator.rs  query_validator.rs
futari-server/crates/futari_entity/: Cargo.toml
futari-server/crates/futari_entity/src/: comments.rs  posts.rs  user_preferences.rs  user_roles.rs  users.rs
futari-server/crates/futari_entity/src/common/: mod.rs  oauth_provider.rs  role.rs
futari-server/crates/futari_errors/: Cargo.toml
futari-server/crates/futari_errors/src/: errors.rs  lib.rs  protocol.rs
futari-server/crates/futari_errors/src/handlers/: email_handler.rs  eventstream_handler.rs  file_handler.rs  general_handler.rs  meilisearch_handler.rs  oauth_handler.rs  password_handler.rs  rate_limit_handler.rs  report_handler.rs  session_handler.rs  system_handler.rs  token_handler.rs  totp_handler.rs  turnstile_handler.rs  worker_handler.rs
(+207 files in other folders)
