[package]
name = "futari_errors"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version .workspace = true
license.workspace = true
description = "futari_errors"

[dependencies]
# Internal crates
futari_config = { workspace = true }

# External dependencies
serde = { workspace = true }
sea-orm = { workspace = true }
utoipa = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
